Tweaked icons for accuracy

--- a/src/pages/updates/work-in-progress/index.mdx
+++ b/src/pages/updates/work-in-progress/index.mdx
@@ -38,7 +38,7 @@ provide feedback and influence Carbon's direction.
     onClick={() => fathom('trackGoal', 'GC8C8OMU', 0)}
     title="Carbon mobile sketch kit"
     href="https://www.sketch.com/s/f7556588-235f-4bcb-8aeb-e2bc64ba4249"
-    actionIcon="download"
+    actionIcon="launch"
   />
 </CardGroup>
 
@@ -69,5 +69,6 @@ provide feedback and influence Carbon's direction.
     onClick={() => fathom('trackGoal', 'ZASURK2Q', 0)}
     title="Activation concepts"
     href="https://ibm.box.com/shared/static/oz5fs63ozvymy2lgmm7jowiisvja6zg5.sketch"
+    actionIcon="download"
   />
 </CardGroup>
