--- a/src/pages/community/component-index.mdx
+++ b/src/pages/community/component-index.mdx
@@ -11,7 +11,7 @@ import ComponentIndexPage from '../../components/ComponentIndexPage';
 
 <InlineNotification>
 
-The community index is a work-in-progress and is not ready for production use.
+The community index is a work in progress and is not ready for production use.
 
 </InlineNotification>
 
