--- a/src/pages/community/component-index.mdx
+++ b/src/pages/community/component-index.mdx
@@ -9,6 +9,12 @@ description:
 
 import ComponentIndexPage from '../../components/ComponentIndexPage';
 
+<InlineNotification>
+
+The community index is a work in progress and is not ready for production use.
+
+</InlineNotification>
+
 <PageDescription>
 
 These components are developed and maintained by members of the IBM Carbon
