updated Yarn, content tweaks, added dataviz sketch

--- a/src/pages/updates/work-in-progress/index.mdx
+++ b/src/pages/updates/work-in-progress/index.mdx
@@ -24,12 +24,12 @@ in the open, and this page is here to give you early previews of what we're
 working on.
 
 That could mean making an unfinished Sketch kit available for download, linking
-to GitHub issues for proposed components and patterns, or presenting graphics
-files of concepts on how we might present content.
+to GitHub issues for proposed components and patterns, or sharing graphics files
+of concepts for how we might present content.
 
-Not everything here may make it into production, other pieces might become
+Not everything here may make it into production, while other pieces might become
 central pieces of the design system. It's an early opportunity for you to
-provide feedback and influence Carbon's direction.
+provide feedback and have a say in Carbon's direction.
 
 ### Tools and resources
 
@@ -37,8 +37,14 @@ provide feedback and influence Carbon's direction.
   <MiniCard
     onClick={() => fathom('trackGoal', 'GC8C8OMU', 0)}
     title="Carbon mobile sketch kit"
-    href="https://www.sketch.com/s/f7556588-235f-4bcb-8aeb-e2bc64ba4249"
+    href="https://www.sketch.com/s/a3343128-adb6-489c-9e62-709d89ba76e9"
     actionIcon="launch"
+  />
+  <MiniCard
+    onClick={() => fathom('trackGoal', 'GP38VQMY', 0)}
+    title="Data viz sticker sheet"
+    href="https://www.sketch.com/s/a3343128-adb6-489c-9e62-709d89ba76e9"
+    actionIcon="download"
   />
 </CardGroup>
 
