--- a/src/pages/updates/work-in-progress/index.mdx
+++ b/src/pages/updates/work-in-progress/index.mdx
@@ -43,7 +43,7 @@ provide feedback and have a say in Carbon's direction.
   <MiniCard
     onClick={() => fathom('trackGoal', 'GP38VQMY', 0)}
     title="Data viz sticker sheet"
-    href="https://www.sketch.com/s/a3343128-adb6-489c-9e62-709d89ba76e9"
+    href="https://ibm.box.com/s/epx74uadotxbx36aknn1s2nmvhpzgk4o"
     actionIcon="download"
   />
 </CardGroup>
