update: edit content

--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -195,7 +195,7 @@ will stack vertically.
 ### Placement
 
 When including a button as the action to upload a file, use either a primary or
-tertiary button depending on your usecase. If there is already a primary button
+tertiary button depending on your use case. If there is already a primary button
 present on the page, use a tertiary button for the file uploader so it does not
 conflict with the primary action.
 
@@ -291,16 +291,16 @@ To remove an uploaded file, click the "x” (or close) icon.
 
 #### Keyboard
 
-####Upload button or drop zone:
+#### Upload button or drop zone:
 
 - The file uploader button or drop zone can be activated by pressing `Space` or
   `Enter`.
 - The file uploader button or drop zone should have text or a label that
   accurately describes the action that will be taken.
 - After the file selection dialog closes, focus should retain the user’s point
-  of rgard and return to the element that invoked it.
+  of regard and return to the element that invoked it.
 
-####Uploaded file:
+#### Uploaded file:
 
 - Pressing `Tab` shifts focus to the “x” icon.
 - Pressing `Space` or `Enter` while the "x" icon is in focus will delete the
@@ -308,12 +308,12 @@ To remove an uploaded file, click the "x” (or close) icon.
 
 #### Screen readers
 
-- VoiceOver: Users can copy code by pressing `Space` while the copy button has
-  screen reader focus.
-- JAWS: Users can copy code by pressing `Space` while the copy button has screen
-  reader focus.
-- NVDA: Users can copy code by pressing `Space` while the copy button has screen
-  reader focus.
+- VoiceOver: Users can upload a file by pressing `Space` while the button or
+  drop zone area is in focus.
+- JAWS: Users can upload a file by pressing `Space` while the button or drop
+  zone area is in focus.
+- NVDA: Users can upload a file by pressing `Space` while the button or drop
+  zone area is in focus.
 
 ### Validation
 
