Update: content edit

--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -38,7 +38,7 @@ uploader.
 
 | Type                                                        | Way it works                                                                                |
 | ----------------------------------------------------------- | ------------------------------------------------------------------------------------------- |
-| [File uploader(default)](#file-uploader)                    | Upload one or more files by clicking an action button that prompts a file selection dialog. |
+| [File uploader](#file-uploader)                             | Upload one or more files by clicking an action button that prompts a file selection dialog. |
 | [Drag and drop file uploader](#drag-and-drop-file-uploader) | Drag and drop selected files directly into a drop zone area to upload.                      |
 
 ### When to use
