image review edits

--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -175,9 +175,9 @@ the file uploader for consistency.
 
 | File uploader size | Height (px/rem) | Use case                                                                                          |
 | ------------------ | --------------- | ------------------------------------------------------------------------------------------------- |
-| Large              | 48/3            | Choose this size when there is a lot of space to work with.                                       |
-| Medium             | 40/2.5          | This is our default size and should be used whenever possible.                                    |
-| Small              | 32/2            | Use when space is constricted or when placing a file uploader in a form that is long and complex. |
+| _Large_            | 48/3            | Choose this size when there is a lot of space to work with.                                       |
+| _Medium_           | 40/2.5          | This is our default size and should be used whenever possible.                                    |
+| _Small_            | 32/2            | Use when space is constricted or when placing a file uploader in a form that is long and complex. |
 
 ### Alignment
 
