--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -46,9 +46,17 @@ independently, but the components were designed to work together.
 
 ### When to use
 
-The UI shell header is a globally persistent element in your UI that can be used
-to identify the UI by name and can include navigational links and other
-utilities.
+- Identify the UI by name
+- Globally persistent location for navigational links and utilities.
+
+### Types
+
+| Type                   | Purpose                                                                                                                                       |
+| ---------------------- | --------------------------------------------------------------------------------------------------------------------------------------------- |
+| Header base            | Has a persistent site title that can be used to identify a single page UI.                                                                    |
+| Header with navigation | Includes links and dropdowns for a simple navigation.                                                                                         |
+| Header with actions    | Actions or utilities appear in the header as icon buttons to give users quick access to common utilites.                                      |
+| Header with sidenav    | The header can be paired with the [UI shell left panel](/components/UI-shell-left-panel/usage) to offer a deeper level of navigation in a UI. |
 
 ## Live demo
 
@@ -73,20 +81,20 @@ The header spans the full width of the viewport and is the topmost element in
 the browser window. Header elements are persistent throughout the product
 experience.
 
-<Row>
-<Column colLg={12}>
-
-![Header anatomy](images/header-anatomy.png)
-
-</Column>
-</Row>
-
 For each UI shell component, left-to-right translates to product-to-global. The
 left side of the header contains items relevant at the product level. Moving to
 the right along the header, the functions become more global. Elements in the
 middle of the header should represent system-level controls. Elements on the
 right side of the header, such as the switcher, are the most global in their
 scope and span multiple products.
+
+<Row>
+<Column colLg={12}>
+
+![Header anatomy](images/header_anatomy.png)
+
+</Column>
+</Row>
 
 1. **Hamburger menu**: The hamburger icon is used to open product navigation
    such as the [left panel.](/components/UI-shell-left-panel/usage) The
@@ -125,7 +133,7 @@ the header with no gaps between icons.
 <DoDontRow>
   <DoDont caption="Header utilities are right aligned with no gaps">
 
-![Example of header icons right aligned with no gaps.](images/utility_placemet_do.png)
+![Example of header icons right aligned with no gaps.](images/utility_placement_do.png)
 
   </DoDont>
   <DoDont type="dont" caption="Header utilities with a gap between the account and help icons.">
@@ -157,13 +165,38 @@ icon, and search.
 | Account       | 2nd from the right                     |                                                                                                                                                                                                              |
 | Switcher      | Right                                  | The switcher should always be positioned as the furthest right icon. This ensures the icon does not shift when navigating across systems.                                                                    |
 
-## Content
-
-### Main elements
-
-### Overflow content
-
 ## Behaviors
+
+### Interactions
+
+#### Mouse
+
+#### Keyboard
+
+Some users may use a keyboard to navigate your site. Starting focus in the main
+navigation lets them quickly navigate to other areas in your UI, but could block
+them from the main content if there is a large number of navigation items to tab
+through first.
+
+[Success Criterion 2.4.1 (Bypass Blocks)](https://www.w3.org/TR/2016/NOTE-WCAG20-TECHS-20161007/G1)
+suggest bypassing these blocks by providing "Skip to main" link at the start of
+you navigation’s focusable controls. This lets users easily skip the navigation
+region and begin interacting with the page’s main content area.
+
+<Row>
+<Column  colLg={8} colMd={8} colSm={6} >
+
+![hint text](images/skip-to-main-content.gif)
+
+<Caption>
+  The "Skip to main content link" is the first focusable element on the Carbon
+  website.
+</Caption>
+
+</Column>
+</Row>
+
+### Responsive behavior
 
 As a header scales down to fit smaller screen sizes, header links and menus
 should collapse into a left-panel hamburger menu. See the examples below to
@@ -180,23 +213,15 @@ left panel items, pushing them down accordingly.
 </Column>
 </Row>
 
-### States
-
-### Interactions
-
-### Validation
-
-### Responsive behavior
-
-### Default selection
-
 ### Clickable areas
 
-### Loading
-
-## Modifiers
-
 ## Related
+
+The following components are additional ways to organize and navigate data.
+
+- [UI Shell left panel](/components/UI-shell-left-panel/usage/)
+
+- [UI shell right panel](/components/UI-shell-right-panel/usage/)
 
 ## References
 
