--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -171,6 +171,14 @@ icon, and search.
 
 #### Mouse
 
+<Row>
+<Column colLg={12}>
+
+![UI shell header click targets.](images/header_click_target.png)
+
+</Column>
+</Row>
+
 #### Keyboard
 
 Some users may use a keyboard to navigate your site. Starting focus in the main
@@ -228,6 +236,10 @@ The following components are additional ways to organize and navigate data.
 - Susan Farrell,
   [Utility Navigation: What It Is and How to Design It](https://www.nngroup.com/articles/utility-navigation/)
   (Nielsen Norman Group, 2015)
+- WebAIM, [_"Skip Navigation" Links_](https://webaim.org/techniques/skipnav/)
+  (2013)
+- [Web Content Accessibility Guidelines](https://www.w3.org/WAI/standards-guidelines/wcag/)
+  (W3C, 2018)
 
 ## Feedback
 
