content edit review

--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -308,12 +308,12 @@ To remove an uploaded file, click the "x” (or close) icon.
 
 #### Screen readers
 
-- VoiceOver: Users can upload a file by pressing `Space` while the button or
+- VoiceOver: Users can upload a file by pressing `VO+Space` while the button or
   drop zone area is in focus.
-- JAWS: Users can upload a file by pressing `Space` while the button or drop
-  zone area is in focus.
-- NVDA: Users can upload a file by pressing `Space` while the button or drop
-  zone area is in focus.
+- JAWS: Users can upload a file by pressing `Enter` or `Space` while the button
+  or drop zone area is in focus.
+- NVDA: Users can upload a file by pressing `Enter` or `Space` while the button
+  or drop zone area is in focus.
 
 ### Validation
 
