--- a/src/pages/all-about-carbon/what-is-carbon.mdx
+++ b/src/pages/all-about-carbon/what-is-carbon.mdx
@@ -19,8 +19,7 @@ community of contributors.
 
 <AnchorLink>Introduction</AnchorLink>
 <AnchorLink>Guiding principles</AnchorLink>
-<AnchorLink>Governance</AnchorLink>
-<AnchorLink>Certificate of Originality</AnchorLink>
+<AnchorLink>How we work</AnchorLink>
 
 </AnchorLinks>
 
@@ -111,24 +110,3 @@ primary maintainers:
 **Design patterns are harvested from products built with Carbon.** These become
 part of the design system. Teams can use these well-defined patterns in their
 work and contribute patterns back to the system.
-
-## Certificate of Originality
-
-This information is only relevant for IBM teams building with Carbon.
-
-### Carbon v10.x
-
-- COO record ID: 95607540
-- COO reference number: COO20190204
-- Name of IBM material (with version number): IBM Design System [Version 10,
-  Release n/a, Modification n/a]
-- Last release date: March 31, 2019
-- Name of Product/Program manager or author of material: Matt Rosno/US/IBM
-
-### Carbon v9.x
-
-- COO number of IBM material (if any): AUS720180239
-- Name of IBM material (with version number): IBM Design System [Version 9,
-  Release n/a, Modification n/a]
-- Last release date: June 4, 2018
-- Name of Product/Program manager or author of material: Matt Rosno/US/IBM
