--- a/src/pages/data-visualization/getting-started/index.mdx
+++ b/src/pages/data-visualization/getting-started/index.mdx
@@ -37,8 +37,9 @@ Carbon charts help you tell accurate and convincing stories around data with bea
 
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="charting design specifications (Coming soon)"
-    disabled
+    subTitle="Master data visualization design file (WIP)"
+    href="https://ibm.box.com/s/8pjaahej965jc8quavur9eb3808qibxz"
+    ssactionIcon="download"
   >
     <MdxIcon name="sketch" />
   </ResourceCard>
