--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -215,14 +215,15 @@ To use Sketch libraries you must have the **most recent version** of [Sketch](ht
 
 ### Data visualizations
 
-<Row className="resource-card-group">
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Download WIP charting design specifications (IBM internal link)"
-      disabled>
-      <MdxIcon name="sketch" />
-    </ResourceCard>
-  </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Master data visualization design file (WIP)"
+    href="https://ibm.box.com/s/8pjaahej965jc8quavur9eb3808qibxz"
+    actionIcon="download"
+  >
+    <MdxIcon name="sketch" />
+  </ResourceCard>
+</Column>
 
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
