docs: designing, developing, latest news, events,

--- a/src/pages/all-about-carbon/case-studies.mdx
+++ b/src/pages/all-about-carbon/case-studies.mdx
@@ -1,4 +1,11 @@
 ---
 title: Case studies
-description:
+description: Introductory text for the new case studies page.
 ---
+
+<PageDescription>
+
+Introductory text for the new case studies page. We'll be sharing more case
+studies here as they become available.
+
+</PageDescription>
