--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -1,130 +1,46 @@
 ---
-title: Resources
+title: Design resources
 description:
-  Everything you need to work with, learn about, and contribute to Carbon.
+  Everything you need to learn about and work with Carbon, including Sketch
+  libraries and templates, color palettes, fonts, GitHub repos, and design
+  tools.
 ---
 
 <PageDescription>
 
-Everything you need to work with, learn about, and contribute to Carbon.
+Everything you need to learn about and work with Carbon, Sketch libraries and
+templates, color palettes, GitHub repos, and design tools.
 
 </PageDescription>
 
 <AnchorLinks>
-
-<AnchorLink>Development resources</AnchorLink>
-<AnchorLink>Design resources</AnchorLink>
-<AnchorLink>Tools</AnchorLink>
-<AnchorLink>Reading</AnchorLink>
-
+  <AnchorLink>Introduction</AnchorLink>
+  <AnchorLink>Theme libraries</AnchorLink>
+  <AnchorLink>Color, grid, and icons</AnchorLink>
+  <AnchorLink>Fonts</AnchorLink>
+  <AnchorLink>GitHub repos</AnchorLink>
+  <AnchorLink>Tools</AnchorLink>
 </AnchorLinks>
 
-## Development resources
+## Introduction
 
-### GitHub repos
+Carbon interprets the
+[IBM Design Language](https://www.ibm.com/design/language/) and delivers it
+through tools for designers and developers including guidance, tooling,
+components, and support. Take the time to read the design language site so that
+you fully understand what drives IBM's design philosophy and principles, and can
+make informed decisions in your product design work.
 
-<Row className="resource-card-group">
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Carbon Components"
-    href="https://github.com/carbon-design-system/carbon-components"
-    >
+To use the Sketch libraries you'll find here, you need the **most recent
+version** of [Sketch](<[https://www.sketch.com/](https://www.sketch.com/)>)
+installed. If you’re new to the design kit, visit the
+[Kits](designing/kits/sketch) page.
 
-<MdxIcon name="github" />
+For data visualization resources, go to the
+[Data visualization](<[https://www.carbondesignsystem.com/data-visualization/color-palettes](/data-visualization/color-palettes)>)
+section.
 
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Carbon Components React"
-    href="https://github.com/carbon-design-system/carbon-components-react"
-    >
-
-<MdxIcon name="github" />
-
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Carbon Components Angular"
-    href="https://github.com/IBM/carbon-components-angular"
-    >
-
-<MdxIcon name="github" />
-
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Carbon Components Vue"
-    href="https://github.com/carbon-design-system/carbon-components-vue"
-    >
-
-<MdxIcon name="github" />
-
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4}  noGutterSm>
-  <ResourceCard
-    subTitle="Carbon boilerplate"
-    href="https://github.com/carbon-design-system/carbon-boilerplate"
-    >
-
-<MdxIcon name="github" />
-
-  </ResourceCard>
-</Column>
-<Column colMd={4} colLg={4} noGutterSm>
-  <ResourceCard
-    subTitle="Carbon Charts Core"
-    href="https://github.com/carbon-design-system/carbon-charts/tree/master/packages/core">
-    <MdxIcon name="github" />
-  </ResourceCard>
-</Column>
-</Row>
-
-### Storybooks
-
-<Row className="resource-card-group">
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Carbon React Storybook"
-    href="http://react.carbondesignsystem.com/"
-    >
-
-<MdxIcon name="react" />
-
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-      subTitle="Carbon Vue Storybook"
-      href="http://vue.carbondesignsystem.com/"
-      >
-
-<MdxIcon name="vue" />
-
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-      subTitle="Carbon Angular Storybook"
-      href="http://angular.carbondesignsystem.com/"
-      >
-
-<MdxIcon name="angular" />
-
-  </ResourceCard>
-</Column>
-</Row>
-
-## Design resources
-
-To use Sketch libraries you must have the **most recent version** of
-[Sketch](https://www.sketchapp.com/) installed. If you're new to the design kit,
-visit the [Get started](/get-started/design/sketch) guide.
-
-### Theme libraries
+## Theme libraries
 
 <Row className="resource-card-group">
   <Column colLg={4} colMd={4} noGutterSm>
@@ -161,7 +77,7 @@ visit the [Get started](/get-started/design/sketch) guide.
   </Column>
 </Row>
 
-### Color, grid, and icons
+## Color, grid, and icons
 
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
@@ -220,30 +136,20 @@ visit the [Get started](/get-started/design/sketch) guide.
     <MdxIcon name="sketch" />
   </ResourceCard>
 </Column>
+
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Color contrast checker"
+    href="https://marijohannessen.github.io/color-contrast-checker/"
+    >
+
+![](images/color-contrast-icon.png)
+
+  </ResourceCard>
+</Column>
 </Row>
 
-### Data visualizations
-
-<Row className="resource-card-group">
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Download WIP charting design specifications (IBM internal link)"
-      disabled>
-      <MdxIcon name="sketch" />
-    </ResourceCard>
-  </Column>
-
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Data visualization color palettes (IBM internal link)"
-      href="https://ibm.box.com/s/3mt8fshtgy70r7rhxjhfo3gbdt0n3x5y"
-      actionIcon="download">
-      <MdxIcon name="sketch" />
-    </ResourceCard>
-  </Column>
-</Row>
-
-### GitHub repos
+## GitHub repos
 
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
@@ -270,62 +176,11 @@ visit the [Get started](/get-started/design/sketch) guide.
 
 <br />
 
-#### IBM Plex
+## Fonts
 
 Carbon uses the open-source typeface [IBM Plex](https://github.com/ibm/plex) –
 carefully designed to meet IBM's needs as a global technology company and
 reflect IBM's spirit, beliefs, and design principles.
-
-#### IBM Design Language
-
-Carbon delivers the [IBM Design Language](https://www.ibm.com/design/language/)
-as tools for designers and developers, guidance, tutorials, and support.
-
-## Tools
-
-<Row className="resource-card-group">
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Carbon CodePen"
-    href="http://www.codepen.io/team/carbon"
-    >
-
-<MdxIcon name="codepen" />
-
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Color contrast checker"
-    href="https://marijohannessen.github.io/color-contrast-checker/"
-    >
-
-![](images/color-contrast-icon.png)
-
-  </ResourceCard>
-</Column>
-
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Adobe XD design kit"
-    href="https://github.com/IBM/design-kit/raw/master/Adobe%20XD/Carbon%20Design%20System%20-%20V10%20-%20White%20(11.01.19).xd"
-    actionIcon="download">
-
-![](images/adobe-xd.png)
-
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Carbon Devtools"
-    href="https://github.com/carbon-design-system/devtools"
-    >
-
-![](images/carbon-devtools.png)
-
-  </ResourceCard>
-</Column>
-</Row>
 
 ## Reading
 
