--- a/src/pages/whats-happening/changelog-and-roadmap/index.mdx
+++ b/src/pages/whats-happening/changelog-and-roadmap/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Changelog and roadmap
+title: Changelog & roadmap
 description:
   This changelog reflects the most recent changes to the design system, from bug
   fixes to feature enhancements.
