--- a/src/pages/whats-happening/events/index.mdx
+++ b/src/pages/whats-happening/events/index.mdx
@@ -1,4 +1,16 @@
 ---
 title: Events
 description:
+  The Carbon team is committed to making members of the community successful.
+  Find events for learning what’s new, tips and tricks, and leveling up your
+  skills.
 ---
+
+<PageDescription>
+
+The Carbon team is committed to making members of the community successful. Find
+events for learning what’s new, tips and tricks, and leveling up your skills.
+
+</PageDescription>
+
+This page is a work in progress.
