--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -1,4 +1,292 @@
 ---
 title: News and articles
 description:
+  Learn about what the Carbon team is doing in our Medium articles. And take a
+  peek at our current reading list of favorite books and articles.
 ---
+
+<PageDescription>
+
+Learn about what the Carbon team is doing in our Medium articles. And take a
+peek at our current reading list of favorite books and articles.
+
+</PageDescription>
+
+<AnchorLinks>
+  <AnchorLink>Latest news</AnchorLink>
+  <AnchorLink>What we're reading</AnchorLink>
+</AnchorLinks>
+
+## Latest news
+
+### Medium articles
+
+<Row>
+
+<Column colLg={4} colMd={4} noGutterMdLeft>
+
+<ArticleCard
+    title="Seven new UX patterns for Carbon"
+    author="Jan Child"
+    date="January 9, 2020"
+    href="https://medium.com/carbondesign/seven-new-ux-patterns-for-carbon-f4a18c20c535"
+    >
+
+![](/images/patterns_announcement.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+
+<ArticleCard
+    title="New in Carbon: October 2019"
+    author="Tyler Tate"
+    date="October 10, 2019"
+    href="https://medium.com/carbondesign/october-release-fadc38b757ad"
+    >
+
+![](/images/v10.7-release.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Help build Carbon — Hacktoberfest 2019"
+    author="Connor Leech"
+    date="October 1, 2019"
+    href="https://medium.com/carbondesign/help-build-carbon-hacktoberfest-2019-dbf337305c92"
+    >
+
+![](/images/hacktoberfest.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Because, colors are beautiful"
+    author="Shixie Shi Trofimov"
+    date="September 25, 2019"
+    href="https://medium.com/carbondesign/because-colors-are-beautiful-52dd4cc39f09"
+    >
+
+![](/images/because-colors.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="What’s around the Carbon corner: October 🎃"
+    author="Josefina Mancilla"
+    date="September 6, 2019"
+    href="https://medium.com/carbondesign/whats-around-the-carbon-corner-october-a47532f2933"
+    >
+
+![](/images/october_release.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Carbon for IBM Security"
+    author="Jen Downs"
+    date="August 20, 2019"
+    href="https://medium.com/carbondesign/carbon-for-ibm-security-986ccfe5c012"
+    >
+
+![](/images/security_pic.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Carbon: July recap + August preview"
+    author="Josefina Mancilla"
+    date="July 26, 2019"
+    href="https://medium.com/carbondesign/carbon-july-preview-whats-coming-in-august-7a2483ea6ac9"
+    >
+
+![](/images/Aug_preview_rev_2.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Carbon June(ish) preview"
+    author="Alison Joseph"
+    date="June 12, 2019"
+    href="https://medium.com/carbondesign/carbon-june-ish-preview-9c5843258933"
+    >
+
+![](/images/june_option_3.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Carbon v10.3.0 (May 2019)"
+    author="Josh Black"
+    date="June 6, 2019"
+    href="https://medium.com/carbondesign/carbon-v10-3-0-may-2019-41b1f970f0ce"
+    >
+
+![](/images/10_3-image.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Essentials: Learn to build with Carbon"
+    author="Matt Rosno"
+    date="May 15, 2019"
+    href="https://medium.com/carbondesign/essentials-learn-to-build-with-carbon-1d11ce05125f"
+    >
+
+![](/images/code_palette.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Carbon is moving to a monorepo"
+    author="Josh Black"
+    date="May 10, 2019"
+    href="https://medium.com/carbondesign/carbon-is-moving-to-a-monorepo-c6bfcbe87de0"
+    >
+
+![](/images/mono_repo_teal.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Carbon dark themes are here"
+    author="Lauren Rice"
+    date="April 29, 2019"
+    href="https://medium.com/carbondesign/carbon-dark-themes-are-here-a18910a0f910"
+    >
+
+![](/images/carbon_themes.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Carbon v10 Release"
+    author="Robin Cannon"
+    date="April 4, 2019"
+    href="https://medium.com/carbondesign/carbon-v10-release-812eacb7da7f"
+    >
+
+![](/images/bee_70.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+  <ArticleCard
+    title="Design with Carbon: Update your Sketch symbols to V10"
+    author="Anna Gonzales"
+    date="April 2, 2019"
+    href="https://medium.com/carbondesign/design-with-carbon-update-your-sketch-symbols-to-v10-ef3132ea2e97"
+    >
+
+![](/images/designing_with_carbon.png)
+
+  </ArticleCard>
+</Column>
+<Column colLg={4} colMd={4}  noGutterMdLeft>
+  <ArticleCard
+    title="Minimal CSS with Carbon"
+    author="Josh Black"
+    date="April 1, 2019"
+    href="https://medium.com/carbondesign/minimal-css-with-carbon-b0c089ccfa71"
+    >
+
+![](/images/minimal_css.png)
+
+  </ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+  <ArticleCard
+    title="What to expect in Carbon 10"
+    author="Robin Cannon"
+    date="December 10, 2018"
+    href="https://medium.com/carbondesign/what-to-expect-in-carbon-10-5af1bd6e25f6">
+
+![](/images/Carbon_what_to_expect.png)
+
+  </ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+  <ArticleCard
+    title="Up & Running with Carbon React in less than 5 minutes"
+    author="Josh Black"
+    date="October 19, 2018"
+    href="https://medium.com/carbondesign/up-running-with-carbon-react-in-less-than-5-minutes-25d43cca059e">
+
+![](/images/Article_02.png)
+
+  </ArticleCard>
+</Column>
+<Column colLg={4} colMd={4}  noGutterMdLeft>
+  <ArticleCard
+    title="Hacktoberfest with Carbon"
+    author="Josh Black"
+    date="October 16, 2018"
+    href="https://medium.com/carbondesign/hacktoberfest-with-carbon-95c48943f586">
+
+![](/images/Article_03.png)
+
+  </ArticleCard>
+</Column>
+</Row>
+
+## What we're reading
+
+<Row>
+<Column colLg={4} colMd={4}  noGutterMdLeft>
+  <ArticleCard
+    title="Writing Is Designing"
+    href="https://rosenfeldmedia.com/books/writing-is-designing/">
+
+![](images/writing-is-designing.png)
+
+  </ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+  <ArticleCard
+    title="Smashing Magazine’s “Design Systems” Book"
+    href="https://www.smashingmagazine.com/design-systems-book/">
+
+![](images/Featured_01.png)
+
+  </ArticleCard>
+</Column>
+
+<Column colLg={4} colMd={4}  noGutterMdLeft>
+  <ArticleCard
+    title="Path to Design System Maturity"
+    href="https://medium.com/ux-power-tools/the-path-to-design-system-maturity-d403daba692a">
+
+![](images/Featured_03.png)
+
+  </ArticleCard>
+</Column>
+<Column  colLg={4} colMd={4} noGutterMdLeft>
+  <ArticleCard
+    title="Responsive Web Design Podcast"
+    href="https://responsivewebdesign.com/podcast/ibm-carbon/">
+
+![](images/Featured_04.png)
+
+  </ArticleCard>
+</Column>
+<Column colLg={4} colMd={4}  noGutterMdLeft>
+  <ArticleCard
+    title="UX Pin Virtual Design Summit"
+    href="https://www.youtube.com/watch?v=eSvq5MieOdw&t=144s">
+
+![](images/Featured_05.png)
+
+  </ArticleCard>
+</Column>
+</Row>
