docs: updates to what's happening

--- a/src/pages/whats-happening/changelog-and-roadmap/index.mdx
+++ b/src/pages/whats-happening/changelog-and-roadmap/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: Changelog & roadmap
 description:
-  This changelog reflects the most recent changes to the design system, from bug
-  fixes to feature enhancements.
+  Read about the latest updates and learn more about what the team has planned
+  for Carbon’s future.
 ---
 
 <PageDescription>
