--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -1,14 +1,14 @@
 ---
-title: News and articles
+title: News & articles
 description:
-  Learn about what the Carbon team is doing in our Medium articles. And take a
-  peek at our current reading list of favorite books and articles.
+  Learn about some of Carbon's bigger projects and take a peek at our current
+  reading list of favorite books and articles.
 ---
 
 <PageDescription>
 
-Learn about what the Carbon team is doing in our Medium articles. And take a
-peek at our current reading list of favorite books and articles.
+Learn about some of Carbon's bigger projects and take a peek at our current
+reading list of favorite books and articles.
 
 </PageDescription>
 
