master charts file and anatomy image fixes

--- a/src/pages/data-visualization/chart-anatomy/index.mdx
+++ b/src/pages/data-visualization/chart-anatomy/index.mdx
@@ -86,10 +86,10 @@ Circular charts are primarily pie and donut charts. Other circular layout charts
   <Aside>
     1. Chart title<br/>
     2. Label<br/>
-    3. Legends<br/>
-    4. Graph frame<br/>
-    5. Big number<br/>
-    6. Tooltip<br/>
+    3. Tooltip<br/>
+    4. Legend<br/>
+    5. Graph frame<br/>
+    6. Big number<br/>
   </Aside>
 </Column>
 </Row>
