--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -218,8 +218,9 @@ To use Sketch libraries you must have the **most recent version** of [Sketch](ht
 <Row className="resource-card-group">
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
-      subTitle="Download WIP charting design specifications (IBM internal link)"
-      disabled>
+      subTitle="Master data visualization design file (WIP)"
+      href="https://ibm.box.com/s/8pjaahej965jc8quavur9eb3808qibxz"
+      actionIcon="download">
       <MdxIcon name="sketch" />
     </ResourceCard>
   </Column>
