Legend image updates

--- a/src/pages/data-visualization/legends/index.mdx
+++ b/src/pages/data-visualization/legends/index.mdx
@@ -111,17 +111,19 @@ Position the legend to the left of the chart when better type alignment is neede
 
 #### Right
 
-Position the legend to the right of the chart when space is plentiful, or when you would like to provide the maximum context.
+Position the legend to the right of the chart when space is plentiful, or when you would like to provide the maximum context. In mobile, the legend could revert to a stack.
 
 <Row>
 <Column  colLg={8} colMd={6} colSm={4}>
+
 <ArtDirection>
 
-![Legends bahvior highlight on hover](images/legends-pos-3sm.png)
-![Legends bahvior highlight on hover](images/legends-pos-3.png)
-![Legends bahvior highlight on hover](images/legends-pos-3.png)
+![Legends behavior highlight on hover](images/legends-pos-3sm.png)
+![Legends behavior highlight on hover](images/legends-pos-3.png)
+![Legends behavior highlight on hover](images/legends-pos-3.png)
 
 </ArtDirection>
+
 </Column>
 </Row>
 
@@ -129,15 +131,15 @@ Position the legend to the right of the chart when space is plentiful, or when y
 
 In geospatial charts, legends can be overlayed on top of a graph frame as long as the legend has a background opacity of 80% of the chart’s background color. Since geospatial charts can vary drastically in appearance, the legend can be placed in either side of the chart, top- or bottom-aligned, whatever best accomodates the content.
 
-To demonstrate the legend’s background opacity, we chose to place the legend at the top left in the chart below.
+To demonstrate the legend’s background opacity, we chose to place the legend at the top left in the chart below. See the Master data visulization design file for more detail about geospatial legends.
 
 <Row>
 <Column  colLg={12} colMd={6} colSm={4}>
 <ArtDirection>
 
-![Legends bahvior highlight on hover](images/legends-pos-5sm.png)
-![Legends bahvior highlight on hover](images/legends-pos-5.png)
-![Legends bahvior highlight on hover](images/legends-pos-5.png)
+![Legends behavior highlight on hover](images/legends-pos-5sm.png)
+![Legends behavior highlight on hover](images/legends-pos-5.png)
+![Legends behavior highlight on hover](images/legends-pos-5.png)
 
 </ArtDirection>
 </Column>
@@ -154,9 +156,9 @@ Hovering over the legend of one category lowers the opacity of all other categor
 
 <ArtDirection>
 
-![Legends bahvior highlight on hover](images/legends-behavior-1-sm.png)
-![Legends bahvior highlight on hover](images/legends-behavior-1.png)
-![Legends bahvior highlight on hover](images/legends-behavior-1.png)
+![Legends behavior highlight on hover](images/legends-behavior-1-sm.png)
+![Legends behavior highlight on hover](images/legends-behavior-1.png)
+![Legends behavior highlight on hover](images/legends-behavior-1.png)
 
 </ArtDirection>
 
