--- a/src/pages/developing/get-started.mdx
+++ b/src/pages/developing/get-started.mdx
@@ -1,4 +1,116 @@
 ---
 title: Get started
 description:
+  Get started developing with the Carbon Design System. We also support the
+  system in React, vanilla JS, Angular, and Vue.
 ---
+
+<!-- this page is a work in progresss -->
+
+<PageDescription>
+
+Welcome to Carbon! Get started developing in the Carbon Design System. The
+Carbon Design System is built React first. We also support core parts of the
+system in vanilla JS, Angular, and Vue and offer guidelines for other
+frameworks.
+
+</PageDescription>
+
+<AnchorLinks>
+
+<AnchorLink>Get started</AnchorLink>
+<AnchorLink>Tutorial</AnchorLink>
+<AnchorLink>Developer resources</AnchorLink>
+
+</AnchorLinks>
+
+## Get started
+
+<Row className="resource-card-group">
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="React"
+    href="frameworks/react"
+    >
+
+<MdxIcon name="react" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Angular (Community)"
+      href="frameworks/angular"
+      >
+
+<MdxIcon name="angular" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Vue (Community)"
+      href="frameworks/vue"
+      >
+
+<MdxIcon name="vue" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Other frameworks"
+      href="frameworks/other-frameworks"
+      / >
+</Column>
+</Row>
+
+## Tutorial
+
+We offer tutorials to help guide you in creating an app with the Carbon Design
+System. We’ll teach you the ins and outs of using Carbon components, while
+introducing web development best practices along the way.
+
+<Row className="resource-card-group">
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="React tutorial"
+    href="react-tutorial/overview"
+    >
+
+<MdxIcon name="react" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Angular tutorial"
+      href="angular-tutorial/overview"
+      >
+
+<MdxIcon name="angular" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Vue tutorial"
+      href="vue-tutorial/overview"
+      >
+
+<MdxIcon name="vue" />
+
+  </ResourceCard>
+</Column>
+</Row>
+
+## Developer Resources
+
+Here you’ll find Carbon tools, as well as our GitHub repos and Storybooks for
+your framework of choice.
+
+<Row className="resource-card-group">
+  <Column colLg={4} colMd={4} noGutterSm>
+    <ResourceCard subTitle="Developer resources" href="developer-resources" />
+  </Column>
+</Row>
