update carbon charts to 0.34.11 and add new demos

--- a/src/pages/data-visualization/basic-charts/index.mdx
+++ b/src/pages/data-visualization/basic-charts/index.mdx
@@ -19,13 +19,9 @@ import { AnchorLinks, AnchorLink } from 'gatsby-theme-carbon';
 import AllDemos from '../../../components/data-visualization/AllDemos.js';
 
 <AnchorLinks>
-  {
-    demoGroups.map(storybookDemoGroup => (
-      <AnchorLink>{storybookDemoGroup.title}</AnchorLink>
-    ))
-  }
-
-  <AnchorLink>Design-only</AnchorLink>
+  {demoGroups.map((storybookDemoGroup) => (
+    <AnchorLink>{storybookDemoGroup.title}</AnchorLink>
+  ))}
 </AnchorLinks>
 
 ## Resources
@@ -41,37 +37,3 @@ import AllDemos from '../../../components/data-visualization/AllDemos.js';
 </Row>
 
 <AllDemos />
-
-## Design-only
-
-<InlineNotification>
-
-Note: These charts are currently a work-in-progress. To see our roadmap, request
-missing guidance, or contribute content, please go to the carbon-charts
-[GitHub repository](https://github.com/carbon-design-system/carbon-charts).
-
-</InlineNotification>
-
-### Meter
-
-<InlineNotification>
-
-**Note:** Meter charts are not yet available in Carbon Charts. These
-explorations are subject to change.
-
-</InlineNotification>
-
-Meter charts are useful for showing values between a small number of variables
-either by using multiple markers on the same meter, or by using multiples of the
-chart.
-
-<Row>
-<Column colMd={4} colLg={4}>
-
-![Meters](images/charts-basic-meter.png)
-
-<Caption>
-Meter charts can represent data with current value, minimum and maximum, and peaks or averages.
-</Caption>
-</Column>
-</Row>
