--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -202,6 +202,7 @@ appropriate chart type.
  <OverviewCard
     title="Tree map"
     href="/data-visualization/advanced-charts#tree-maps"
+	tag="Design only"
     >
 
 ![Tree map](images/treemap.svg)
