--- a/src/pages/developing/frameworks/react.mdx
+++ b/src/pages/developing/frameworks/react.mdx
@@ -29,8 +29,8 @@ and production work.
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Carbon Components"
-    href="https://github.com/carbon-design-system/carbon"
+    subTitle="Carbon React"
+    href="https://react.carbondesignsystem.com"
     >
 
 ![Storybook icon](images/storybook.svg)
