add data visualization storybook links to Resources page

--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -118,6 +118,51 @@ Everything you need to work with, learn about, and contribute to Carbon.
 </Column>
 </Row>
 
+### Storybooks - Data visualization
+
+<Row className="resource-card-group">
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Carbon Charts - vanilla Storybook"
+    href="https://carbon-design-system.github.io/carbon-charts/"
+    >
+
+<MdxIcon name="codesandbox" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Carbon Charts - React Storybook"
+    href="https://carbon-design-system.github.io/carbon-charts/react"
+    >
+
+<MdxIcon name="react" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Carbon Charts - Angular Storybook"
+      href="https://carbon-design-system.github.io/carbon-charts/angular"
+      >
+
+<MdxIcon name="angular" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Carbon Charts - Vue Storybook"
+      href="https://carbon-design-system.github.io/carbon-charts/vue"
+      >
+
+<MdxIcon name="vue" />
+
+  </ResourceCard>
+</Column>
+</Row>
+
 ## Design resources
 
 To use Sketch libraries you must have the **most recent version** of
