updated master link

--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -213,13 +213,13 @@ To use Sketch libraries you must have the **most recent version** of [Sketch](ht
 </Column>
 </Row>
 
-### Data visualizations
+### Data visualization
 
 <Row className="resource-card-group">
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Master data visualization design file (WIP)"
-      href="https://ibm.box.com/s/8pjaahej965jc8quavur9eb3808qibxz"
+      href="https://ibm.box.com/s/w7fhywdpfb56t2l61ab8uoo93g6jaec5"
       actionIcon="download">
       <MdxIcon name="sketch" />
     </ResourceCard>
