--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -46,7 +46,7 @@ independently, but the components were designed to work together.
 
 ### When to use
 
-- Identify the UI by name
+- Identify the UI by name.
 - Globally persistent location for navigational links and utilities.
 
 ### Types
@@ -78,8 +78,7 @@ independently, but the components were designed to work together.
 ### Anatomy
 
 The header spans the full width of the viewport and is the topmost element in
-the browser window. Header elements are persistent throughout the product
-experience.
+the browser window. The header is persistent throughout the product experience.
 
 For each UI shell component, left-to-right translates to product-to-global. The
 left side of the header contains items relevant at the product level. Moving to
@@ -145,8 +144,8 @@ the header with no gaps between icons.
 
 ### Example placement
 
-The example below shows a header with a switcher, three core icons, a product
-icon, and search.
+The example below shows a header with a switcher, typical platform utility
+icons, and search.
 
 <Row>
 <Column colLg={8}>
@@ -158,7 +157,7 @@ icon, and search.
 
 | Icon          | Position                               |                                                                                                                                                                                                              |
 | ------------- | -------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| Search        | Left                                   | Search should always be positioned as the furthest left icon. This is to allow for a expanding search field that does not disrupt other icon positions.                                                      |
+| Search        | Left                                   | Search should always be positioned as the furthest left icon. This is to allow for an expanding search field that does not disrupt other icon positions.                                                     |
 | Other         | Right of Search and left of core icons | The number of header icons a product uses may vary. This placement will help avoid disrupting the position of the core icons and inconsistencies as your user navigates between other product shell headers. |
 | Help          | 4th from the right                     |                                                                                                                                                                                                              |
 | Notifications | 3rd from the right                     |                                                                                                                                                                                                              |
@@ -170,6 +169,9 @@ icon, and search.
 ### Interactions
 
 #### Mouse
+
+The header element target areas span the full height of the header. See the
+style tab for detailed visual information about the various states.
 
 <Row>
 <Column colLg={12}>
@@ -220,8 +222,6 @@ left panel items, pushing them down accordingly.
 
 </Column>
 </Row>
-
-### Clickable areas
 
 ## Related
 
