update carbon charts to 0.34.11, add new demos (#1568)
* update carbon charts to 0.34.11 and add new demos

* design-only tag for treemap chart

* add data visualization storybook links to Resources page

* update radar & horizontal stacked bar icons

--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -113,7 +113,7 @@ appropriate chart type.
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Stream"
-    href="/data-visualization/basic-charts#donut"
+	disabled
     >
 
 ![Stream](images/stream.svg)
@@ -178,19 +178,31 @@ appropriate chart type.
 </Column>
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
 <OverviewCard
-   title="Meter / gauge"
-   href="/data-visualization/basic-charts/#meter-and-gauge"
-   tag="Design only"
+   title="Meter"
+   href="/data-visualization/basic-charts/#meter"
+   >
+
+![Gauge](images/meter.svg)
+
+</OverviewCard>
+</Column>
+
+<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
+<OverviewCard
+   title="Gauge"
+   href="/data-visualization/basic-charts/#gauge"
    >
 
 ![Gauge](images/gauge.svg)
 
 </OverviewCard>
 </Column>
+
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm>
  <OverviewCard
     title="Tree map"
-    href="/data-visualization/basic-charts#gauge"
+    href="/data-visualization/advanced-charts#tree-maps"
+	tag="Design only"
     >
 
 ![Tree map](images/treemap.svg)
@@ -242,7 +254,7 @@ appropriate chart type.
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Alluvial diagram"
-    href="/data-visualization/advanced-charts#alluvial-diagram"
+    href="/data-visualization/advanced-charts#alluvialsankey-diagrams"
     tag="Design only"
     >
 
@@ -252,12 +264,12 @@ appropriate chart type.
 </Column>
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Tree diagram"
-    href="/data-visualization/advanced-charts#tree-diagram"
+    title="Network diagram"
+    href="/data-visualization/advanced-charts#network-diagrams"
     tag="Design only"
     >
 
-![Tree diagram](images/treediagram.svg)
+![Network diagram](images/treediagram.svg)
 
 </OverviewCard>
 </Column>
@@ -269,7 +281,7 @@ appropriate chart type.
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Choropleth map"
-    href="/data-visualization/advanced-charts#choropleth-map"
+    href="/data-visualization/advanced-charts#geographic-overlays"
     tag="Design only"
     >
 
@@ -280,7 +292,7 @@ appropriate chart type.
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Proportional symbol"
-    href="/data-visualization/advanced-charts#proportional-symbol"
+    href="/data-visualization/advanced-charts#proportional-symbol-map"
     tag="Design only"
     >
 
@@ -291,7 +303,7 @@ appropriate chart type.
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Connecting lines"
-    href="/data-visualization/advanced-charts#connecting-lines"
+    href="/data-visualization/advanced-charts#connection-map"
     tag="Design only"
     >
 
