Link text change

--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -227,7 +227,7 @@ visit the [Get started](/get-started/design/sketch) guide.
 <Row className="resource-card-group">
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
-      subTitle="Master data visualization design file (WIP)"
+      subTitle="Master data visualization design file WIP (IBM internal link)"
       href="https://ibm.box.com/s/w7fhywdpfb56t2l61ab8uoo93g6jaec5"
       actionIcon="download">
       <MdxIcon name="sketch" />
