--- a/src/pages/data-visualization/getting-started/index.mdx
+++ b/src/pages/data-visualization/getting-started/index.mdx
@@ -39,7 +39,7 @@ requests to the
 
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Master data visualization design file (WIP)"
+    subTitle="Master data visualization design file WIP (IBM internal link)"
     href="https://ibm.box.com/s/w7fhywdpfb56t2l61ab8uoo93g6jaec5"
     actionIcon="download"
   >
