fix: merge conflict

--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -648,13 +648,8 @@ Use vertical helpers here.
 
 <InlineNotification>
 
-<<<<<<< HEAD
-**Note:** Code for the Narrow grid mode was added in [v10.17.0](https://github.com/carbon-design-system/carbon/releases/tag/v10.17.0)
-=======
-**Note:** Code for the Narrow grid mode is currently using an outdated naming
-convention. We've disabled the attached code snippet until the class name can be
-updated to avoid confusion.
->>>>>>> e893af13e2f683c7b210da1019fb909e34cb5b36
+**Note:** Code for the Narrow grid mode was added in
+[v10.17.0](https://github.com/carbon-design-system/carbon/releases/tag/v10.17.0)
 
 </InlineNotification>
 
