--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -648,7 +648,7 @@ Use vertical helpers here.
 
 <InlineNotification>
 
-**Note:** Code for the Narrow grid mode was added in
+**Note:** Code for the narrow grid mode was added in
 [v10.17.0](https://github.com/carbon-design-system/carbon/releases/tag/v10.17.0)
 
 </InlineNotification>
