--- a/src/pages/components/content-switcher/accessibility.mdx
+++ b/src/pages/components/content-switcher/accessibility.mdx
@@ -49,7 +49,7 @@ be updated when these accessibility issues are resolved.
 
 - [W3C WAI-ARIA Tab Design Pattern](https://www.w3.org/TR/wai-aria-practices-1.1/#tabpanel)
   covers the usage of ARIA names, state and roles, as well as the expected
-  keyboard intractions.
+  keyboard interactions.
 - [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
 
   - [1.3.1 Info and Relationships](https://www.ibm.com/able/guidelines/ci162/info_and_relationships.html)
